Fix background rect size too small on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -468,7 +468,7 @@ footer > ul > li {
     position: absolute;
     top: -5%;
     left: -5%;
-    width: 110%;
+    width: 120%;
     height: 110%;
     background-color: var(--highlight-color);
     box-shadow: rgba(0, 0, 0, 0.25) 0 25px 50px -12px;
